# grpc-web-bazel-ts-example

./: .bazelrc  .gitignore  README.md  WORKSPACE  WORKSPACE.old  package.json  start_all.sh
.github/workflows/: main.yml
proto/: BUILD  BUILD.bazel  greeter.proto
proxy/: docker-compose.yml  envoy.yaml  start_proxy.sh  warm.sh
server/: BUILD  GreeterServer.java  start_grpc_server.sh
web/: BUILD  index.html  local_server.sh  main.js  rollup.config.js  start_static_web_server.sh
