package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//js:defs.bzl", "js_grpc_web_compile")

#load("@rules_python//python:proto.bzl", "py_proto_library")

#load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")


proto_library(
    name = "greeter_proto",
    srcs = ["greeter.proto"],
)

js_grpc_web_compile(
    name = "greeter_grpcweb",
    protos = ["greeter_proto"],
    verbose = 3,
)

# py_proto_library(
#     name = "greeter_py_pb2",
#     deps = [":greeter_proto"],
# )

# py_grpc_library(
#     name = "greeter_py_pb2_grpc",
#     srcs = [":greeter_proto"],
#     deps = [":greeter_py_pb2"],
# )
